--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,8 @@
     transform: rotate(360deg);
   }
 }
+
+@font-face {
+  font-family: "yapari";
+  src: url("./fonts/yapari.ttf") format("truetype");
+}
